--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Arcana by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Amanda Tiew</title>
@@ -18,7 +13,7 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">My Portfolio <em></em></a></h1>
+						<h1><a href="index.html" id="logo">My Portfolio - Amanda Tiew <em></em></a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
